Some errors fixed again. Needed to recreate edmx model from database. Issue was that website didnt get database connection!

--- a/AgileWorksSolution/AgileWorks.Tests/App.config
+++ b/AgileWorksSolution/AgileWorks.Tests/App.config
@@ -9,12 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings></appSettings>
-  <!--<connectionStrings>
-    <add name="AgileWorksDatabaseEntities" connectionString="metadata=res://*/Models.AgileWorksAppealsModel.csdl|res://*/Models.AgileWorksAppealsModel.ssdl|res://*/Models.AgileWorksAppealsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AgileWorksDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>-->
   <connectionStrings>
-    <add name="AgileWorksWebAppealsDBEntities2" connectionString="metadata=res://*/Models.AgileWorksWebAppealsModel.csdl|res://*/Models.AgileWorksWebAppealsModel.ssdl|res://*/Models.AgileWorksWebAppealsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=agileworkswebappealsdbserver.database.windows.net;initial catalog=AgileWorksWebAppealsDB;persist security info=True;user id=kkorvel;password=Triikraud123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AgileWorksWebAppealsDBEntities" connectionString="metadata=res://*/Models.AgileWorksWebAppealsModel.csdl|res://*/Models.AgileWorksWebAppealsModel.ssdl|res://*/Models.AgileWorksWebAppealsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=agileworkswebappealsdbserver.database.windows.net;initial catalog=AgileWorksWebAppealsDB;user id=kkorvel;password=Triikraud123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <!--<connectionStrings>
+    --><!--<add name="AgileWorksWebAppealsDBEntities2" connectionString="metadata=res://*/Models.AgileWorksWebAppealsModel.csdl|res://*/Models.AgileWorksWebAppealsModel.ssdl|res://*/Models.AgileWorksWebAppealsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=agileworkswebappealsdbserver.database.windows.net;initial catalog=AgileWorksWebAppealsDB;persist security info=True;user id=kkorvel;password=Triikraud123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />--><!--
+    <add name="AgileWorksWebAppealsDBEntities" connectionString="metadata=res://*/Models.AgileWorksWebAppealsModel.csdl|res://*/Models.AgileWorksWebAppealsModel.ssdl|res://*/Models.AgileWorksWebAppealsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=agileworkswebappealsdbserver.database.windows.net;initial catalog=AgileWorksWebAppealsDB;user id=kkorvel;password=Triikraud123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>-->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
