--- a/AgileWorksSolution/AgileWorks/Web.config
+++ b/AgileWorksSolution/AgileWorks/Web.config
@@ -68,9 +68,9 @@
   </system.webServer>
 
   <connectionStrings>
-    <!--<add name="AgileWorksWebAppealsDBEntities2" connectionString="metadata=res://*/Models.AgileWorksWebAppealsModel.csdl|res://*/Models.AgileWorksWebAppealsModel.ssdl|res://*/Models.AgileWorksWebAppealsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=agileworkswebappealsdbserver.database.windows.net;initial catalog=AgileWorksWebAppealsDB;persist security info=True;user id=kkorvel;password=Triikraud123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  <add name="AgileWorksWebAppealsDBEntities" connectionString="metadata=res://*/Models.AgileWorksWebAppealsModel.csdl|res://*/Models.AgileWorksWebAppealsModel.ssdl|res://*/Models.AgileWorksWebAppealsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=agileworkswebappealsdbserver.database.windows.net;initial catalog=AgileWorksWebAppealsDB;user id=kkorvel;password=Triikraud123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+
+
+  <add name="AgileWorksWebAppealsDBEntities" connectionString="metadata=res://*/Models.AgileWorksAppealsDatabaseModel.csdl|res://*/Models.AgileWorksAppealsDatabaseModel.ssdl|res://*/Models.AgileWorksAppealsDatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=agileworkswebappealsdbserver.database.windows.net;initial catalog=AgileWorksWebAppealsDB;user id=kkorvel;password=Triikraud123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
