--- a/AgileWorksSolution/AgileWorks.Tests/packages.config
+++ b/AgileWorksSolution/AgileWorks.Tests/packages.config
@@ -8,4 +8,6 @@
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
 </packages>
