Added some improvements! Still working on Database mocking in tests!

--- a/AgileWorksSolution/AgileWorks/AgileWorks.csproj
+++ b/AgileWorksSolution/AgileWorks/AgileWorks.csproj
@@ -250,6 +250,7 @@
     <Content Include="Views\Appeals\Index.cshtml" />
     <Content Include="Views\Appeals\Delete.cshtml" />
     <Content Include="Views\Appeals\Create.cshtml" />
+    <Content Include="Views\Appeals\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
